--- a/Jeffrey-pizzeria-model/.project
+++ b/Jeffrey-pizzeria-model/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Pizzeria-ihm</name>
+	<name>Jeffrey-pizzeria-model</name>
 	<comment></comment>
 	<projects>
 	</projects>
