--- a/Jeffrey-pizzeria-dao/pom.xml
+++ b/Jeffrey-pizzeria-dao/pom.xml
@@ -2,15 +2,20 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>DTA</groupId>
-    <artifactId>Pizzeria-app</artifactId>
-    <version>0.0.1-Dev</version>
+    <artifactId>Jeffrey-pizzeria-app</artifactId>
+    <version>1.0.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <artifactId>Pizzeria-ihm</artifactId>
+  <artifactId>Jeffrey-pizzeria-dao</artifactId>
   <dependencies>
   	<dependency>
   		<groupId>${project.parent.groupId}</groupId>
-  		<artifactId>Pizzeria-dao</artifactId>
+  		<artifactId>Jeffrey-pizzeria-model</artifactId>
+  		<version>${project.parent.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>${project.parent.groupId}</groupId>
+  		<artifactId>Jeffrey-pizzeria-exception</artifactId>
   		<version>${project.parent.version}</version>
   	</dependency>
   </dependencies>
