--- a/Jeffrey-pizzeria-exception/.project
+++ b/Jeffrey-pizzeria-exception/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Pizzeria-dao</name>
+	<name>Jeffrey-pizzeria-exception</name>
 	<comment></comment>
 	<projects>
 	</projects>
