--- a/Jeffrey-pizzeria-dao/pom.xml
+++ b/Jeffrey-pizzeria-dao/pom.xml
@@ -1,22 +1,28 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>DTA</groupId>
-    <artifactId>Jeffrey-pizzeria-app</artifactId>
-    <version>1.0.0</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <artifactId>Jeffrey-pizzeria-dao</artifactId>
-  <dependencies>
-  	<dependency>
-  		<groupId>${project.parent.groupId}</groupId>
-  		<artifactId>Jeffrey-pizzeria-model</artifactId>
-  		<version>${project.parent.version}</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>${project.parent.groupId}</groupId>
-  		<artifactId>Jeffrey-pizzeria-exception</artifactId>
-  		<version>${project.parent.version}</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>DTA</groupId>
+		<artifactId>Jeffrey-pizzeria-app</artifactId>
+		<version>1.0.0</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+	<artifactId>Jeffrey-pizzeria-dao</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>Jeffrey-pizzeria-model</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>Jeffrey-pizzeria-exception</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.40</version>
+		</dependency>
+	</dependencies>
 </project>
