--- a/Jeffrey-pizzeria-dao/pom.xml
+++ b/Jeffrey-pizzeria-dao/pom.xml
@@ -12,17 +12,20 @@
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>Jeffrey-pizzeria-model</artifactId>
-			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>Jeffrey-pizzeria-exception</artifactId>
-			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.40</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.1</version>
 		</dependency>
 	</dependencies>
 </project>
