--- a/Jeffrey-pizzeria-app/Jeffrey-pizzeria-ihm/pom.xml
+++ b/Jeffrey-pizzeria-app/Jeffrey-pizzeria-ihm/pom.xml
@@ -12,5 +12,9 @@
   		<groupId>${project.parent.groupId}</groupId>
   		<artifactId>Jeffrey-pizzeria-dao</artifactId>
   	</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
   </dependencies>
 </project>
