--- a/Jeffrey-pizzeria-app/Jeffrey-pizzeria-console/pom.xml
+++ b/Jeffrey-pizzeria-app/Jeffrey-pizzeria-console/pom.xml
@@ -29,5 +29,9 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
 	</dependencies>
 </project>
