--- a/Jeffrey-pizzeria-app/pom.xml
+++ b/Jeffrey-pizzeria-app/pom.xml
@@ -15,6 +15,7 @@
 
 		<module>Jeffrey-pizzeria-client</module>
 		<module>jeffrey-pizzeria-admin-app</module>
+		<module>jeffrey-pizzeria-stock-app</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
@@ -108,6 +109,11 @@
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
 				<version>1.4.193</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>2.8.5</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
